Updated id in OpenAPI profile
