# modules/dev24-restbuilder-impl/rest-openapi.yaml
@@ -18,10 +18,10 @@ components:
           description: "The Object Name"
           type: string
 paths:
-  "/dev24-object":
+  "/dev24-objects":
     get:
       description: "Gets a list of Objects"
-      operationId: getDev24ObjectPage
+      operationId: getDev24ObjectsPage
       responses:
         200:
           description: ""
@@ -36,6 +36,7 @@ paths:
                 items:
                   $ref: "#/components/schemas/Dev24Object"
                 type: array
+      tags: ["Dev24Object"]
     post:
       description: "Creates a new Object"
       operationId: postDev24Object
@@ -57,13 +58,15 @@ paths:
             application/xml:
               schema:
                  $ref: "#/components/schemas/Dev24Object"
-  "/dev24-object/{dev24ObjectId}":
+      tags: ["Dev24Object"]
+  "/dev24-objects/{objectId}":
     get:
-      description: "Get and Object"
       operationId: getDev24Object
+      tags: ["Dev24Object"]
+      description: "Get an Object by id"
       parameters:
         - in: path
-          name: dev24ObjectId
+          name: objectId
           required: true
           schema:
             type: integer
